Update test plan for consistency and finished nonfunctional quality test results and summary in test report

--- a/Documents/Test-Plan.tex
+++ b/Documents/Test-Plan.tex
@@ -29,15 +29,18 @@
 	\newpage
 	\begin{table}[h]
 	\caption{Revision History Table}
-	\begin{tabular}{|l|c|r|p{6cm}|}
+	\begin{tabular}{|p{1.5cm}|l|p{3cm}|p{6cm}|}
   	\hline
   	Revision \# & Date & Team Member & Description of Change\\
   	\hline
   	0 & October 20 & Hui Chen & Started Test Plan document\\
   	\hline
-  	0 & October 21 & Sam Hamel Hui Chen & Test Plan Revision 0 finished\\
+  	0 & October 21 & Sam Hamel  & Test Plan Revision 0 finished\\
+  	 & & Hui Chen & \\
   	\hline
   	0 & October 22 & Nareshkumar Maheshkumar & Proofread\\
+  	\hline
+  	1 & November 28 & Hui chen & Made changes to section 2.3 Usability and Learnability Tests\\
   	\hline
 	\end{tabular}
 	\end{table}
@@ -283,10 +286,10 @@ Regression will be tested using automatic testing. With the use of Junit, any ch
 Error handling will be tested using manual and automatic tests. When an error occurs, the system should display some form of error prompt to alert the user, and have the error logged. The logged error will be tested automatically for accuracy and the prompt will be manually tested for accuracy and the follow up action should resolve the error. 
 
 \subsubsection*{Usability Tests:}
-Usability requirements will be tested through manual testing. A small sample (1-5 people) of non beginners ( people who are familiar with the rules of Texas Hold'em, and have played before), will play a round of the game to completion. They will then be asked to rate the usability on a scale of 1-10.
+Usability requirements will be tested through manual testing. A small sample (1-10 people) of non beginners ( people who are familiar with the rules of Texas Hold'em, and have played before), will play a round of the game to completion. They will be timed and later be asked to comment on their experience with the task.
 
 \subsubsection*{Learnability Tests:}
-Learnability will be tested through manual testing. A small sample (1-5 people), of beginners will be selected and they will be required to perform tasks such as going through the help page and then playing a game based on what they’ve learned from the help page. They will then rate its usefulness on a scale of 1-10.
+Learnability will be tested through manual testing. A small sample (1-10 people), of beginners will be selected and they will be required to perform tasks such as going through the help page and then playing a game based on what they’ve learned from the help page. They will be timed and later be asked to comment on their experience with the task.
 
 \subsubsection*{Playability Tests:}
 Playability will be tested through dynamic, unit system testing. If the system tests prove to be adequate and conclusive, then the game will be playable. 
