Add Coverage Matrix table by Sam

--- a/Documents/TestReport.tex
+++ b/Documents/TestReport.tex
@@ -43,7 +43,30 @@
 	\section{Introductions}
 	\subsection{Testing Methods}
 	\subsection{Coverage Matrix}
-
+	\begin{table}[ht]
+	\caption{Coverage Matrix Table}
+	\begin{tabular}{||c|c|L|}
+	\hline
+	\multicolumn{3}{|l|}{Test 1: Game Start Speed}\\
+	\hline
+	Requirements & Results & Automation Coverage\\
+	\hline
+	3.4 1) & 2.5: pass & None\\
+	\hline
+	3.4 2) & 2.8: pass & None\\
+	\hline
+	3.4 3) & 2.1-2.4: pass & Pass\\
+	\hline
+	3.4 4) & 2.1, 2.7: pass & pass\\
+	\hline
+	3.4 5) & 2.1-2.4: pass & pass\\
+	\hline
+	3.4 7) & 2.1: pass & pass \\
+	\hline
+	3.4 8) & 2.6: pass & pass \\
+	\hline
+	\end{tabular}
+	\end{table}
 	\section{Nonfunctional Quality Tests}	
 	\subsection{Usability Tests}
 	Usability Tests are performed by recruiting 3 complete beginners with no knowledge of the game as well as 3 people who are already familiar with the game. The participants were given a series of tasks to perform. The amount of time required for them to complete the task as well as comments to the task are recorded. Participants will not be named to protect their identity. Further discussion of the results can be found in section 7.1.
